// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MinusCircleIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-MinusCircleIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-MinusCircleIcon-background"
    cx="8"
    cy="8"
    r="8"
  />
  <rect
    className="lucid-MinusCircleIcon-minus"
    height="2"
    width="10"
    x="3"
    y="7"
  />
</Icon>
`;

exports[`MinusCircleIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-MinusCircleIcon lucid-MinusCircleIcon-is-clickable"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-MinusCircleIcon-background"
    cx="8"
    cy="8"
    r="8"
  />
  <rect
    className="lucid-MinusCircleIcon-minus"
    height="2"
    width="10"
    x="3"
    y="7"
  />
</Icon>
`;

exports[`MinusCircleIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-MinusCircleIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-MinusCircleIcon-background lucid-MinusCircleIcon-background-is-disabled"
    cx="8"
    cy="8"
    r="8"
  />
  <rect
    className="lucid-MinusCircleIcon-minus"
    height="2"
    width="10"
    x="3"
    y="7"
  />
</Icon>
`;
